Fix alignment of stat boxes, add padding to stat tables

--- a/app/assets/stylesheets/_ataglance.scss
+++ b/app/assets/stylesheets/_ataglance.scss
@@ -5,7 +5,6 @@
     margin-top: 10px;
 
     .statbox-wrapper {
-      padding: 5px;
 
       div {
         height: 134px;
@@ -14,9 +13,10 @@
 
         table {
           height: 100%;
+
           tr {
             td {
-              padding: 2px;
+              padding: 7px;
               font-size: 13px;
               line-height: 1;
               vertical-align: middle;
